--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "init": "^0.1.2",
     "mongoose": "^8.2.4"
